--- a/CoreWebApp/CoreWebApp.Web/Views/ScrumTasks/Delete.cshtml
+++ b/CoreWebApp/CoreWebApp.Web/Views/ScrumTasks/Delete.cshtml
@@ -18,10 +18,16 @@
             @Html.DisplayFor(model => model.TaskName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TaskData)
+            @Html.DisplayNameFor(model => model.Status)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TaskData)
+            @Html.DisplayFor(model => model.Status)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.TaskDescription)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.TaskDescription)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CreatedOn)
