--- a/CoreWebApp/CoreWebApp.Web/Views/ScrumTasks/Edit.cshtml
+++ b/CoreWebApp/CoreWebApp.Web/Views/ScrumTasks/Edit.cshtml
@@ -19,9 +19,14 @@
                 <span asp-validation-for="TaskName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TaskData" class="control-label"></label>
-                <input asp-for="TaskData" class="form-control" />
-                <span asp-validation-for="TaskData" class="text-danger"></span>
+                <label asp-for="Status" class="control-label"></label>
+                <select asp-for="Status" class="form-control"></select>
+                <span asp-validation-for="Status" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="TaskDescription" class="control-label"></label>
+                <input asp-for="TaskDescription" class="form-control" />
+                <span asp-validation-for="TaskDescription" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CreatedOn" class="control-label"></label>
