--- a/CoreWebApp/CoreWebApp.Web/Views/ScrumTasks/Create.cshtml
+++ b/CoreWebApp/CoreWebApp.Web/Views/ScrumTasks/Create.cshtml
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="TaskDescription" class="control-label"></label>
-                <input asp-for="TaskDescription" class="form-control" />
+                <textarea asp-for="TaskDescription" class="form-control"></textarea>
                 <span asp-validation-for="TaskDescription" class="text-danger"></span>
             </div>
             <div class="form-group">
