--- a/CoreWebApp/CoreWebApp.Web/Views/ScrumTasks/Edit.cshtml
+++ b/CoreWebApp/CoreWebApp.Web/Views/ScrumTasks/Edit.cshtml
@@ -12,7 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="ScrumTaskId" />
             <div class="form-group">
                 <label asp-for="TaskName" class="control-label"></label>
                 <input asp-for="TaskName" class="form-control" />
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="TaskDescription" class="control-label"></label>
-                <input asp-for="TaskDescription" class="form-control" />
+                <textarea asp-for="TaskDescription" class="form-control"></textarea>
                 <span asp-validation-for="TaskDescription" class="text-danger"></span>
             </div>
             <div class="form-group">
