refactored and project split up

--- a/CoreWebApp/CoreWebApp.Web/Views/ScrumTasks/Index.cshtml
+++ b/CoreWebApp/CoreWebApp.Web/Views/ScrumTasks/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CoreWebApp.Web.Models.ScrumTask>
+﻿@model IEnumerable<ScrumBoard.Data.Models.ScrumTask>
 
 @{
     ViewData["Title"] = "Index";
