--- a/CoreWebApp/CoreWebApp.Web/Views/Boards/Delete.cshtml
+++ b/CoreWebApp/CoreWebApp.Web/Views/Boards/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model ScrumBoard.Data.Models.ScrumTask
+﻿@model ScrumBoard.Data.Models.Board
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,26 +8,14 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>ScrumTask</h4>
+    <h4>Board</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TaskName)
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TaskName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Status)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TaskDescription)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TaskDescription)
+            @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CreatedOn)
@@ -44,7 +32,7 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="ScrumTaskId" />
+        <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
