--- a/CoreWebApp/CoreWebApp.Web/Views/Boards/Details.cshtml
+++ b/CoreWebApp/CoreWebApp.Web/Views/Boards/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model ScrumBoard.Data.Models.ScrumTask
+﻿@model ScrumBoard.Data.Models.Board
 
 @{
     ViewData["Title"] = "Details";
@@ -7,26 +7,14 @@
 <h1>Details</h1>
 
 <div>
-    <h4>ScrumTask</h4>
+    <h4>Board</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TaskName)
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TaskName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Status)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TaskDescription)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TaskDescription)
+            @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CreatedOn)
@@ -43,6 +31,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ScrumTaskId">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
