--- a/CoreWebApp/CoreWebApp.Web/Views/Boards/Edit.cshtml
+++ b/CoreWebApp/CoreWebApp.Web/Views/Boards/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model ScrumBoard.Data.Models.ScrumTask
+﻿@model ScrumBoard.Data.Models.Board
 
 @{
     ViewData["Title"] = "Edit";
@@ -6,27 +6,17 @@
 
 <h1>Edit</h1>
 
-<h4>ScrumTask</h4>
+<h4>Board</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ScrumTaskId" />
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="TaskName" class="control-label"></label>
-                <input asp-for="TaskName" class="form-control" />
-                <span asp-validation-for="TaskName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Status" class="control-label"></label>
-                <select asp-for="Status" class="form-control"></select>
-                <span asp-validation-for="Status" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TaskDescription" class="control-label"></label>
-                <textarea asp-for="TaskDescription" class="form-control"></textarea>
-                <span asp-validation-for="TaskDescription" class="text-danger"></span>
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CreatedOn" class="control-label"></label>
