--- a/CoreWebApp/CoreWebApp.Web/Views/_ViewImports.cshtml
+++ b/CoreWebApp/CoreWebApp.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using CoreWebApp.Web
-@using CoreWebApp.Web.Models
+@using ScrumBoard.Data.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
